Bill listing milestones no longer overlap with the bill title

--- a/src/main/webapp/static/scss/app.scss
+++ b/src/main/webapp/static/scss/app.scss
@@ -954,7 +954,7 @@ a.slogan-link {
 /** --- Bill Page Styles --- */
 
 .bill-ms-container {
-  padding: 5px 0;
+  padding: 10px 0 5px 0;
   min-width: 256px;
 }
 
